[tool.poetry]
name = "duchene collab docs"
version = "0.1.0"
description = "Documentation for the phylodynamics workflow as part of the Duchene-MDAP collaboration."
authors = ["University of Melbourne"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.7.1"

[tool.poetry.dev-dependencies]
Sphinx = "^4.2.0"
nbsphinx = "^0.8.7"
sphinx-rtd-theme = "^1.0.0"
sphinx-autobuild = "^2021.3.14"
myst-parser = "^0.15.2"
sphinx-copybutton = "^0.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
